sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:16: error: not found: value &&
      while (i>=ecart) &&  (v<getValeur(i-ecart)){
                       ^